# MonetDB-old

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  CMakeReadme.txt  CODE_OF_CONDUCT.md  MonetDB.spec  README  configure.ag  find_linux_distro.sh.in  manipulate_monet.py  monetdb_config.h.in  rpm.mk.in  vertoo.config
buildtools/conf/: CMakeLists.txt
clients/: CMakeLists.txt
clients/NT/: CMakeLists.txt
clients/Tests/: All  MAL-signatures.stable.out  MAL-signatures.stable.out.int128  MAL-signatures_all.stable.out  MAL-signatures_all.stable.out.int128  MAL-signatures_fits_geom.stable.out  MAL-signatures_fits_geom.stable.out.int128  MAL-signatures_geom.stable.out  MAL-signatures_geom.stable.out.int128  MAL-signatures_none.stable.out  MAL-signatures_none.stable.out.int128  SQL-dump.stable.out  SQL-dump.stable.out.int128  exports.stable.out  malcheck.stable.out
clients/examples/: CMakeLists.txt
clients/iotapi/: requirements.txt
clients/iotclient/: README  requirements.txt
clients/mapiclient/: CMakeLists.txt  Makefile.ag  ReadlineTools.c  dotmonetdb.c  dump.c  eventparser.c  eventparser.h  mclient.c  mhelp.c  mnc.c  msqldump.c  msqldump.h  prompt.c  stethoscope.c  tachograph.c  tomograph.c
clients/mapilib/: CMakeLists.txt  Makefile.ag  mapi.c  mapi.h  monetdb-mapi.pc.in
clients/odbc/: CMakeLists.txt
common/options/: CMakeLists.txt  Makefile.ag  getopt.c  getopt1.c  monet_getopt.h  monet_options.c  monet_options.h
common/stream/: CMakeLists.txt  monetdb-stream.pc.in  stream.c  stream.h  stream_socket.h
common/utils/: CMakeLists.txt  FindRevision.cmake  Makefile.ag  matomic.h  mcrypt.c  mcrypt.h  mprompt.h  msabaoth.c  msabaoth.h  mtwist.c  mtwist.h  mutils.c  mutils.h  muuid.c  muuid.h  prompt.c  revision.c
embedded/: CMakeLists.txt  MonetDBLiteReadme.txt  embedded.c  embedded.h  monetdb_embedded.c  monetdb_embedded.h
gdk/: CMakeLists.txt  Makefile.ag  gdk.h  gdk_aggr.c  gdk_align.c  gdk_arrays.c  gdk_arrays.h  gdk_atomic.h  gdk_atoms.c  gdk_atoms.h  gdk_bat.c  gdk_batop.c  gdk_bbp.c  gdk_bbp.h  gdk_calc.c  gdk_calc.h  gdk_calc_compare.h  gdk_calc_private.h  gdk_cand.c  gdk_cand.h  gdk_cross.c  gdk_delta.c  gdk_delta.h  gdk_firstn.c  gdk_group.c  gdk_hash.c  gdk_hash.h  gdk_heap.c  gdk_imprints.c  gdk_imprints.h  gdk_interprocess.c  gdk_interprocess.h  gdk_join.c  gdk_logger.c  gdk_logger.h  gdk_mapreduce.c  gdk_mapreduce.h  gdk_orderidx.c  gdk_posix.c  gdk_posix.h  (+28 more)
gdk/Tests/: All  caprss.prologue5  caprss.py  caprss.sql  push_and_check_rss.sql
geom/lib/: CMakeLists.txt  Makefile.ag  libgeom.c  libgeom.h
geom/monetdb5/: 31_grid.mal  31_grid_hge.mal  CMakeLists.txt  Makefile.ag  geom.c  geom.h  geom.mal  geom_upgrade.c  geom_x3d.c  gpu.c  gpu.h  gpu.mal  grid.c  grid.h  grid.h.sh  grid.mal  grid.mal.sh  grid_create_impl.h  grid_hge.mal  grid_hge.mal.sh  grid_impl.h  grid_impl.h.sh  libgeom.h
monetdb5/: CMakeLists.txt  ChangeLog  ChangeLog.malparsing  ChangeLog.oltp  Makefile.ag
monetdb5/NT/: CMakeLists.txt  M5server.bat
monetdb5/embedded/: CMakeLists.txt  mal_embedded.c  mal_embedded.h
monetdb5/extras/: CMakeLists.txt  Makefile.ag
monetdb5/mal/: CMakeLists.txt  Makefile.ag  mal.c  mal.h  mal_atom.c  mal_atom.h  mal_authorize.c  mal_authorize.h  mal_box.c  mal_box.h  mal_builder.c  mal_builder.h  mal_client.c  mal_client.h  mal_dataflow.c  mal_dataflow.h  mal_debugger.c  mal_debugger.h  mal_embedded.c  mal_embedded.h  mal_errors.h  mal_exception.c  mal_exception.h  mal_factory.c  mal_factory.h  mal_function.c  mal_function.h  mal_import.c  mal_import.h  mal_instruction.c  mal_instruction.h  mal_interpreter.c  mal_interpreter.h  mal_linker.c  mal_linker.h  mal_listing.c  mal_listing.h  mal_module.c  mal_module.h  mal_namespace.c  (+32 more)
monetdb5/modules/: CMakeLists.txt  Makefile.ag  prepare.sh
monetdb5/optimizer/: CMakeLists.txt  Makefile.ag  opt_accumulators.c  opt_aliases.c  opt_aliases.h  opt_bitcandidates.c  opt_bitcandidates.h  opt_candidates.c  opt_centipede.c  opt_centipede.h  opt_cluster.c  opt_coercion.c  opt_commonTerms.c  opt_commonTerms.h  opt_compression.c  opt_compression.h  opt_constants.c  opt_constants.h  opt_costModel.c  opt_costModel.h  opt_cquery.c  opt_cquery.h  opt_dataflow.c  opt_datavaults.c  opt_datavaults.h  opt_deadcode.c  opt_deadcode.h  opt_dictionary.c  opt_dictionary.h  opt_emptySet.c  opt_emptySet.h  opt_emptybind.c  opt_evaluate.c  opt_evaluate.h  opt_factorize.h  opt_gadget.c  opt_gadget.h  opt_garbageCollector.c  opt_garbageCollector.h  opt_generator.c  (+68 more)
monetdb5/scheduler/: CMakeLists.txt  Makefile.ag  run_adder.c  run_adder.include  run_adder.mal.h  run_isolate.include  run_isolate.mal.h  run_memo.c  run_memo.include  run_memo.mal.h  run_octopus.c  run_pipeline.c  run_pipeline.h  srvpool.c  srvpool.h
monetdb5/tools/: CMakeLists.txt  Makefile.ag  monetdb.c  monetdb5.pc.in
sql/: CMakeLists.txt  ChangeLog  ChangeLog.timetrails  Makefile.ag  rel.txt
sql/NT/: CMakeLists.txt
sql/common/: CMakeLists.txt  Makefile.ag  exception_buffer.c  sql_backend.c  sql_backend.h  sql_changeset.c  sql_hash.c  sql_keyword.c  sql_list.c  sql_mem.c  sql_string.c  sql_string.h  sql_types.c  sql_types.h
sql/include/: CMakeLists.txt  Makefile.ag  exception_buffer.h  sql_catalog.h  sql_hash.h  sql_keyword.h  sql_list.h  sql_mem.h  sql_relation.h  sql_stack.h
sql/scripts/: 09_like.sql  09_like.sql.c  09_like.sql.h  100_stalker.sql  10_math.sql  10_math.sql.c  10_math.sql.h  11_times.sql  11_times.sql.c  11_times.sql.h  12_url.sql  12_url.sql.c  12_url.sql.h  13_date.sql  13_date.sql.c  13_date.sql.h  14_inet.sql  14_inet.sql.c  14_inet.sql.h  15_querylog.sql  15_querylog.sql.c  15_querylog.sql.h  16_tracelog.sql  16_tracelog.sql.c  16_tracelog.sql.h  17_temporal.sql  17_temporal.sql.c  17_temporal.sql.h  18_index.sql  18_index.sql.c  18_index.sql.h  20_vacuum.sql  20_vacuum.sql.c  20_vacuum.sql.h  21_dependency_functions.sql  21_dependency_views.sql.c  21_dependency_views.sql.h  (+79 more)
testing/: CMakeLists.txt  Mdiff.c  Mtest.py.in  Mtimeout.c  difflib.c  helpers.c  helpers.h  listexports.py.in  malcheck.py  process.py  testing_getopt.c
(+2219 files in other folders)
